attempting to fix the contrast

--- a/components/byu-social-media-links/byu-social-media-links-mixins.sass
+++ b/components/byu-social-media-links/byu-social-media-links-mixins.sass
@@ -9,3 +9,12 @@
   background-clip: content-box
   background-position: center
   margin: $spacing2 $spacing2 $spacing2 0 !important
+  border-radius: 50%
+  box-shadow: 0 0 0 1px $byuNavy
+
+  &:hover
+    box-shadow: 0 0 0 2px $byuNavy
+
+  &:focus
+    outline: 2px solid $byuRoyal
+    outline-offset: 2px
